samples/_failures_safe/1761168447_70fa49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bf73b5c.c: In function ‘main’:
./samples/SAFE/__tmp_5bf73b5c.c:135:9: error: expected expression at end of input
  135 |         if (strlen(input_buffer) == 0)
      |         ^~
./samples/SAFE/__tmp_5bf73b5c.c:135:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5bf73b5c.c:135:9: error: expected declaration or statement at end of input
